--- a/web_project/main/templates/main/about.html
+++ b/web_project/main/templates/main/about.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Обо мне</title>
-</head>
-<body>
-<h1>Обо мне</h1>
-<p>Обо мне</p>
-</body>
-</html>
+{% extends 'main/layout.html'%}
+
+{% block title %}Обо мне{% endblock %}
+
+{% block content %}
+    <h1>Обо мне</h1>
+    <p>Обо мне</p>
+{% endblock %}
