--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -8,9 +8,23 @@
     <title>{% block title %}{%endblock%}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 <body>
+    <aside>
+        <img src="main/img/happiness.jpg" alt="Smile">
+        <span class = "Smile">Привет!</span>
+        <h3>Меню</h3>
+        <ul>
+            <li>Главная</li>
+            <li>Про меня</li>
+            <li>Контакты</li>
+        </ul>
+    </aside>
+    <main>
     {% block content %}
     {%endblock%}
+    </main>
+
 </body>
 </html>
