--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -16,9 +16,9 @@
         <span class = "Smile">Привет!</span>
         <h3>Меню</h3>
         <ul>
-            <li>Главная</li>
-            <li>Про меня</li>
-            <li>Контакты</li>
+            <a href=""><li><i class="fa-solid fa-house"></i>Главная</li></a>>
+            <a href=""><li><i class="fa-solid fa-book"></i>Обо мне</li></a>>
+            <a href=""><li><i class="fa-solid fa-phone"></i>Контакты</li></a>>
         </ul>
     </aside>
     <main>
