--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <aside>
-        <img src="main/img/happiness.jpg" alt="Smile">
+        <img src="main/img/happiness.svg" alt="Smile">
         <span class = "Smile">Привет!</span>
-        <h3>Меню</h3>
         <ul>
             <a href=""><li><i class="fa-solid fa-house"></i>Главная</li></a>>
             <a href=""><li><i class="fa-solid fa-book"></i>Обо мне</li></a>>
