--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <aside>
-        <img src="main/img/happiness.svg" alt="Smile">
-        <span class = "Smile">Привет!</span>
+        <img src="{% static 'main/img/me_with_columns.svg' %}" alt="Smile">
+        <span class = "Smile"></span>
         <ul>
             <a href=""><li><i class="fa-solid fa-house"></i>Главная</li></a>>
             <a href=""><li><i class="fa-solid fa-book"></i>Обо мне</li></a>>
