--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -8,22 +8,22 @@
     <title>{% block title %}{%endblock%}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
 </head>
 <body>
     <aside>
-        <img src="{% static 'main/img/me_with_columns.svg' %}" alt="Smile">
+        <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile">
         <span class = "Smile"></span>
         <ul>
-            <a href=""><li><i class="fa-solid fa-house"></i>Главная</li></a>>
-            <a href=""><li><i class="fa-solid fa-book"></i>Обо мне</li></a>>
-            <a href=""><li><i class="fa-solid fa-phone"></i>Контакты</li></a>>
+            <a href=""><li><i class="fa-solid fa-house"></i></i> Главная</li></a>
+            <a href=""><li><i class="fa-solid fa-book"></i> Обо мне</li></a>
+            <a href=""><li><i class="fa-solid fa-phone"></i> Контакты</li></a>
         </ul>
     </aside>
     <main>
     {% block content %}
     {%endblock%}
     </main>
-
 </body>
 </html>
