--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -15,11 +15,11 @@
     <aside>
         <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile">
         <span class = "Smile"></span>
-        <ul>
-            <a href=""><li><i class="fa-solid fa-house"></i></i> Главная</li></a>
-            <a href=""><li><i class="fa-solid fa-book"></i> Обо мне</li></a>
-            <a href=""><li><i class="fa-solid fa-phone"></i> Контакты</li></a>
-        </ul>
+<ul>
+    <li><a href="#"><i class="fas fa-home fa-2x"></i></i> Главная</a></li>
+    <li><a href="#"><i class="fas fa-walking fa-2x"></i></i> Обо мне</a></li>
+    <li><a href="#"><i class="fas fa-address-book fa-2x"></i></i> Контакты</a></li>
+</ul>
     </aside>
     <main>
     {% block content %}
