--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -15,6 +15,7 @@
     <aside>
         <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile">
         <span class = "Smile"></span>
+        <h3>Навигация</h3>
 <ul>
     <li><a href="#"><i class="fas fa-home fa-2x"></i></i> Главная</a></li>
     <li><a href="#"><i class="fas fa-walking fa-2x"></i></i> Обо мне</a></li>
