sized smiling picture

--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <aside>
-        <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile">
+        <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile" width="200" height="200">
         <span class = "Smile"></span>
         <h3>Навигация</h3>
 <ul>
