aside for logo and upgradind aside with logo, text and navigation

--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <aside>
-        <img src="{% static 'main/img/happiness.jpg' %}" alt="Smile" width="200" height="200">
-        <span class = "Smile"></span>
+        <img src="{% static 'main/img/happiness.jpg' %}" alt="logo">
+        <span class = "logo">Komashko Vadim</span>
         <h3>Навигация</h3>
 <ul>
     <li><a href="#"><i class="fas fa-home fa-2x"></i></i> Главная</a></li>
