--- a/web_project/main/static/main/css/main.css
+++ b/web_project/main/static/main/css/main.css
@@ -10,3 +10,14 @@ aside {
     color: #fff;
     border-right: 5x solid #4d4d4d;
 }
+
+aside img{
+    width: 80px;
+    float: left;
+}
+
+aside .logo {
+    font-size: 30px;
+    margin-left: 10px;
+    font-weight: bold;
+}
