--- a/web_project/main/static/main/css/main.css
+++ b/web_project/main/static/main/css/main.css
@@ -18,6 +18,28 @@ aside img{
 
 aside .logo {
     font-size: 30px;
-    margin-left: 10px;
+    margin-right: 30px;
     font-weight: bold;
+    position: relative;
+    top: -5px;
+}
+
+aside h3 {
+    margin-top: 50px;
+    font-size: 30px;
+}
+
+aside ul {list-style: none}
+
+aside ul li {
+    color: #1121;
+    display: block;
+    margin-top: 30px;
+    transition: all .6s ease;
+}
+
+aside ul li: hover, aside ul li a:hover{
+    color: eb5959;
+    text-decoration: none;
+    transform: scale(1.05);
 }
