--- a/web_project/main/static/main/css/main.css
+++ b/web_project/main/static/main/css/main.css
@@ -25,14 +25,13 @@ aside .logo {
 }
 
 aside h3 {
+    margin-left: 25px;
     margin-top: 50px;
     font-size: 30px;
 }
 
-aside ul {list-style: none}
-
 aside ul li {
-    color: #1121;
+    color: #fff;
     display: block;
     margin-top: 30px;
     transition: all .6s ease;
