--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -16,15 +16,15 @@
         <img src="{% static 'main/img/happiness.jpg' %}" alt="logo">
         <span class = "logo">Komashko Vadim</span>
         <h3>Навигация</h3>
-<ul>
-    <li><a href="#"><i class="fas fa-home fa-2x"></i></i> Главная</a></li>
-    <li><a href="#"><i class="fas fa-walking fa-2x"></i></i> Обо мне</a></li>
-    <li><a href="#"><i class="fas fa-address-book fa-2x"></i></i> Контакты</a></li>
-</ul>
+        <ul>
+            <li><a href="#"><i class="fas fa-home fa-2x"></i> Главная</a></li>
+            <li><a href="#"><i class="fas fa-walking fa-2x"></i> Обо мне</a></li>
+            <li><a href="#"><i class="fas fa-address-book fa-2x"></i> Контакты</a></li>
+        </ul>
     </aside>
-    <main>
+<main>
     {% block content %}
     {%endblock%}
-    </main>
+</main>
 </body>
 </html>
