--- a/web_project/main/static/main/css/main.css
+++ b/web_project/main/static/main/css/main.css
@@ -48,7 +48,7 @@ li {
     list-style: none;
     display: flex;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 50px;
     transition: all 0.3s ease;
 }
 
@@ -71,6 +71,7 @@ li:hover {
 
 li:hover i {
     color: purple;
+    transform: scale(1.2);
     }
 
 li:hover a {
