--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -17,9 +17,9 @@
         <span class = "logo">Komashko Vadim</span>
         <h3>Навигация</h3>
         <ul>
-            <li><a href="#"><i class="fas fa-home fa-2x" style="color: #fff;"></i> Главная</a></li>
-            <li><a href="#"><i class="fas fa-walking fa-2x" style="color: #fff;"></i> Обо мне</a></li>
-            <li><a href="#"><i class="fas fa-address-book fa-2x" style="color: #fff;"></i> Контакты</a></li>
+            <li><a href="#"><i class="fas fa-home fa-2x"></i> Главная</a></li>
+            <li><a href="#"><i class="fas fa-walking fa-2x"></i> Обо мне</a></li>
+            <li><a href="#"><i class="fas fa-address-book fa-2x"></i> Контакты</a></li>
         </ul>
     </aside>
 <main>
