--- a/web_project/main/static/main/css/main.css
+++ b/web_project/main/static/main/css/main.css
@@ -49,20 +49,20 @@ li {
     display: flex;
     align-items: center;
     margin-top: 50px;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 li i {
     font-size: 24px;
     margin-right: 10px;
     color: #fff;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 li a {
     color: #fff;
     text-decoration: none;
-    transition: all 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 li:hover {
