--- a/web_project/main/templates/main/about.html
+++ b/web_project/main/templates/main/about.html
@@ -3,6 +3,9 @@
 {% block title %}Обо мне{% endblock %}
 
 {% block content %}
-    <h1>Обо мне</h1>
-    <p>Обо мне</p>
+    <div class ="features">
+        <h1>Обо мне</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem dolores facilis maxime modi nihil nisi numquam obcaecati officiis repudiandae.</p>
+        <button class="btn btn-warning">Нажми</button>
+    </div>
 {% endblock %}
