--- a/web_project/main/templates/main/index.html
+++ b/web_project/main/templates/main/index.html
@@ -3,6 +3,9 @@
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
-    <h1>Главная страница</h1>
-    <p>Главная страница</p>
+    <div class ="features">
+        <h1>Главная страница</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem dolores facilis maxime modi nihil nisi numquam obcaecati officiis repudiandae.</p>
+        <button class="btn btn-warning">На страницу про меня</button>
+    </div>
 {% endblock %}
