--- a/web_project/main/templates/main/index.html
+++ b/web_project/main/templates/main/index.html
@@ -1,11 +1,22 @@
 {% extends 'main/layout.html'%}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block content %}
     <div class ="features">
-        <h1>Главная страница</h1>
+        <h1>{{ title }}</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus autem dolores facilis maxime modi nihil nisi numquam obcaecati officiis repudiandae.</p>
         <button class="btn btn-warning">На страницу про меня</button>
+
+        {% for val in values %}
+            {% if val == 'Hello' %}
+                    <p>{{val|upper }}</p>
+            {%endif%}
+        {% endfor %}
+
+        {% for val in character %}
+        <p>{{val}}</p>
+        {% endfor %}
+
     </div>
 {% endblock %}
