Create Articles model in soft_skills, Made migrations for model, Upgrade for aside panel in layout.html

--- a/web_project/main/templates/main/layout.html
+++ b/web_project/main/templates/main/layout.html
@@ -18,8 +18,8 @@
         <h3>Навигация</h3>
         <ul>
             <li><a href="{% url 'home' %}"><i class="fas fa-home fa-2x"></i>Обо мне</a></li>
+            <li><a href="{% url 'soft_skills' %}"><i class="fas fa-lightbulb fa-2x"></i>Soft-Skills</a></li>
             <li><a href="#"><i class="fas fa-address-book fa-2x"></i>Контакты</a></li>
-            <li><a href="{% url 'soft_skills' %}"><i class="fas fa-lightbulb fa-2x"></i>Обо мне</a></li>
 
         </ul>
     </aside>
