--- a/web_project/main/templates/main/index.html
+++ b/web_project/main/templates/main/index.html
@@ -1,9 +1,39 @@
 {% extends 'main/layout.html'%}
 
 {% block title %}{{ title }}{% endblock %}
+{% load static %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 
-{% block content %}
-    <div class ="features">
-        <h1>Обо мне</h1>
-    </div>
-{% endblock %}
+</head>
+<body>
+<main>
+    {% block content %}
+        <img src="{% static 'main/img/me_with_columns.jpg' %}" alt="me">
+        <span class="me">Komashko Vadim</span>
+        <div class="about-box">
+            <h1>Обо мне</h1>
+        </div>
+
+        <div class="education-box">
+            <h2>Образование</h2>
+            <p>Московский институт стали и сплавов МИСИС, г. Москва</p>
+            <ul>
+                <li>2 курс бакалавриата, направление «Бизнес информатика»</li>
+            </ul>
+
+            <p>ГБОУ Школа №113 г. Москва, социально-экономический класс</p>
+            <ul>
+            </ul>
+        </div>
+    {% endblock %}
+</main>
+</body>
+</html>
