--- a/web_project/main/templates/main/index.html
+++ b/web_project/main/templates/main/index.html
@@ -20,7 +20,6 @@
         <div class="about-box">
             <h1>Обо мне</h1>
         </div>
-
         <div class="education-box">
             <h2>Образование</h2>
             <p>Московский институт стали и сплавов МИСИС, г. Москва</p>
@@ -28,7 +27,14 @@
                 <li>2 курс бакалавриата, направление «Бизнес информатика»</li>
             </ul>
             <p>ГБОУ Школа №113 г. Москва, социально-экономический класс</p>
+        </div>
+
+        <div  class= "mine_character-box">
+            <h2>Характер</h2>
             <ul>
+                <h6>Усидчивый</h6>
+                <h6>Ответственный</h6>
+                <h6>Терпеливый</h6>
             </ul>
         </div>
     {% endblock %}
